plugins {
    id 'application'
    id 'java'
}

group = 'com.pathfinder'
version = '1.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

def javafxSdkPath = file('lib/javafx-sdk-17/lib').absolutePath

dependencies {
    implementation files('lib/javafx-sdk-17/lib/javafx.controls.jar')
    implementation files('lib/javafx-sdk-17/lib/javafx.web.jar')
    implementation files('lib/javafx-sdk-17/lib/javafx.base.jar')

    implementation files('lib/javafx-sdk-17/lib/javafx.graphics.jar')

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
}


println(javafxSdkPath)

application {
    mainClass = 'com.pathfinder.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--module-path', javafxSdkPath,
        '--add-modules', 'javafx.controls,javafx.web'
    ]
}


run {
    jvmArgs = [
        '--module-path', javafxSdkPath,
        '--add-modules', 'javafx.controls,javafx.web'
    ]
}
